--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title>Ivo Blackwood</title>
 
-	<meta name="description" content="graphic designer">
+	<meta name="description" content="Graphic Designer">
 
 	<link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"/>
 
