--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</h1>
 		</div>
 			<div id="q1" style="display:none;">
-			Graphic design<br>UK / NL<br>Previous clients: South London Gallery, Soundcamp<br><br><a href="mailto:ivoblackwood@gmail.com">ivoblackwood@gmail.com</a><br><a href="tel:+44 7477 724842">+44 7477 724842</a>
+			Graphic design<br>UK / NL<br>Previous clients: South London Gallery, Acoustic Commons<br><br><a href="mailto:ivoblackwood@gmail.com">ivoblackwood@gmail.com</a><br><a href="tel:+44 7477 724842">+44 7477 724842</a>
 			</div>
 
 	</div>
